--- a/Week-2/Portfolio/index.html
+++ b/Week-2/Portfolio/index.html
@@ -51,5 +51,81 @@
             <a href="#" class="about-btn">More About Me</a>
         </div>
     </section>
+    <section class="services" id="services">
+        <h2 class="heading">Our <span>Services</span></h2>
+        <div class="services-container">
+            <div class="services-box">
+                <i class="fa-solid fa-computer"></i>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, autem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, atque?</p>
+                <a href="" class="services-btn">Read More</a>
+            </div>
+            <div class="services-box">
+                <i class="fa-solid fa-computer"></i>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, autem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, atque?</p>
+                <a href="" class="services-btn">Read More</a>
+            </div>
+            <div class="services-box">
+                <i class="fa-solid fa-computer"></i>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, autem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, atque?</p>
+                <a href="" class="services-btn">Read More</a>
+            </div>
+        </div>
+    </section>
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">My <span>Projects</span></h2>
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="./assets/project-1.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Project</h4>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="./assets/project-1.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Project</h4>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="./assets/project-1.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Project</h4>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="./assets/project-1.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Project</h4>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="./assets/project-1.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Project</h4>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="./assets/project-1.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Project</h4>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
